IMP: Updates to listening page styling

--- a/src/pages/digital-garden/listening/index.astro
+++ b/src/pages/digital-garden/listening/index.astro
@@ -11,7 +11,7 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
     </div>
     
     <div class="row mt-4">
-      <div class="grid md:grid-cols-2 mb-5 border rounded-lg">
+      <div class="grid md:grid-cols-2 mb-5">
         <div class="flex justify-end">
           <iframe data-testid="embed-iframe-song" style="border-radius:12px" 
                 src="https://open.spotify.com/embed/track/6gqTgtJ3aBDrWE9wrCe7L6?utm_source=generator&theme=0" 
