--- a/src/pages/digital-garden/index.astro
+++ b/src/pages/digital-garden/index.astro
@@ -6,9 +6,7 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
   <div class="digital-garden-list">
     <div class="row">
       <h1 class="text-xl">Welcome to my digital garden!</h1>
-
-      <p>This is my digital garden, you can see what I'm currently working on, as well as my recipe bank, musings about any current reads, talking about any obsessions with what I'm listening to as well as personal guides and notes for any games that I play.</p>
-      <p>I will be updating this page as I go, so expect it to be a work in progress.</p>
+      <p>This is my digital garden, you can see what I'm currently working on, my recipe bank, musings about any current reads, any obsessions with what I'm listening to or watching, as well as personal guides and notes for any games that I play.</p>
     </div>
 
     <div class="grid md:grid-cols-1 gap-3 mt-10">
@@ -53,9 +51,9 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
           <p>Listening</p>
         </div>
       </a>
-      <a class="digital-garden-link-disabled" aria-disabled>
+      <a class="digital-garden-link" href="/digital-garden/watching/">
         <div>
-          <!-- <img src="/images/flowers/flowers-row-2.svg" alt="flowers" class="flower-icon"> -->
+          <img src="/images/flowers/flowers-row-2.svg" alt="flowers" class="flower-icon">
           <p>Watching</p>
         </div>
       </a>
