--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import SignComponent from "../components/sign";
-import HomeContent from "../components/HomeContent";
+import HomeContentComponent from "../components/HomeContentComponent";
 ---
 
 <BaseLayout title="Home">
-  <HomeContent client:load />
+  <HomeContentComponent client:load />
 </BaseLayout>
