--- a/src/styles/partials/_reading.scss
+++ b/src/styles/partials/_reading.scss
@@ -1,7 +1,7 @@
 @use "./_variables" as *;
 
 .book-review {
-  margin: var(--spacing-0) var(--spacing-4); // Footer height & under construction banner
+  margin: var(--spacing-0) var(--spacing-4); // FooterComponent height & under construction banner
 
   header h1 {
     margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
