--- a/src/pages/digital-garden/recipes/[slug].astro
+++ b/src/pages/digital-garden/recipes/[slug].astro
@@ -1,5 +1,7 @@
 ---
 import type { GetStaticPaths } from 'astro';
+import 'react-toastify/dist/ReactToastify.css';
+import { ToastContainer } from 'react-toastify';
 
 import type { Recipe } from '../../../lib/types/recipe';
 import { getAllRecipes, getRecipeBySlug } from '../../../lib/contentful';
@@ -26,15 +28,19 @@ const fullRecipe = await getRecipeBySlug(recipe.slug);
 const hasImages = fullRecipe.imagesCollection && fullRecipe.imagesCollection.items && fullRecipe.imagesCollection.items.length > 0;
 const firstImage = hasImages && fullRecipe.imagesCollection?.items[0] ? fullRecipe.imagesCollection?.items[0] : null;
 
+
 ---
 
 <script>
+  import { toast } from 'react-toastify';
+  
   let wakeLock: WakeLockSentinel | null = null;
   
   async function enableWakeLock() {
     try {
       wakeLock = await navigator.wakeLock.request('screen');
       console.log('Screen will stay awake!');
+      toast.success('Screen will stay awake!');
 
       wakeLock.addEventListener('release', () => {
         console.log('Screen can sleep');
@@ -55,15 +61,26 @@ const firstImage = hasImages && fullRecipe.imagesCollection?.items[0] ? fullReci
 </script>
 
 <BaseLayout title={fullRecipe.name} description={"Recipe for " + fullRecipe.name}>
+  <ToastContainer client:load theme="light" position="top-right" 
+                  closeOnClick={false} autoClose={2500} pauseOnFocusLoss={false}
+                  draggable={false} pauseOnHover={false}/>
   <div class="container recipe">    
     <div class="row">
       <div class="flex flex-row justify-between">
-        <h1 class="text-2xl font-bold mb-2 ml-5">{fullRecipe.name}</h1>
+        <h1 class="text-2xl font-bold mb-2 ml-2">{fullRecipe.name}</h1>
 
-          {fullRecipe.rating ? (
-            <p class="!mt-3">Rating: {'⭐'.repeat(fullRecipe.rating)}</p>
+        {fullRecipe.rating ? (
+            <p class="!mt-3 hidden md:block">Rating: {'⭐'.repeat(fullRecipe.rating)}</p>
           ) : (
-            <p class="!mt-3 text-gray-500">Not rated (yet!)</p>
+            <p class="!mt-3 hidden md:block text-gray-500">Not rated (yet!)</p>
+          )}
+      </div>
+
+      <div class="flex flex-row justify-between md:hidden">
+          {fullRecipe.rating ? (
+            <p class="!mt-2">Rating: {'⭐'.repeat(fullRecipe.rating)}</p>
+          ) : (
+            <p class="!mt-2 text-gray-500">Not rated (yet!)</p>
           )}
 
           <button id="keepAwakeButton" class="text-xs my-auto min-w-fit whitespace-nowrap cursor-pointer border border-gray-300 rounded px-2 py-1">
