--- a/src/styles/partials/_recipe.scss
+++ b/src/styles/partials/_recipe.scss
@@ -137,3 +137,56 @@
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-2) var(--spacing-0);
   width: fit-content;
 }
+
+//Overrides for RecipeCard component
+.recipe-card-custom {
+  margin: var(--spacing-1);
+  border-radius: var(--spacing-2);
+  border: 2px dashed #ccc;
+  padding: var(--spacing-1);
+  text-align: center;
+  background-color: var(--color-surface);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 120px;
+  
+  &:hover {
+    color: var(--color-primary);
+    transition: transform 0.3s ease;
+    animation: recipe-card-bounce 0.6s ease-in-out;
+  }
+
+  .recipe-rating-container {
+    margin-bottom: 0;
+  }
+  
+  .recipe-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px 5px 0 0;
+  }
+
+  .recipe-content {
+    padding: 10px 10px 5px 10px;
+
+    .recipe-name {
+      color: unset;
+      font-size: 1rem;
+      height: 42px;      
+    }
+  }
+}
+
+@keyframes recipe-card-bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
