--- a/src/pages/accessibility-statement.astro
+++ b/src/pages/accessibility-statement.astro
@@ -52,6 +52,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
         <li>zoom in (or out) without breaking your experience</li>
         <li>navigate the site with just your keyboard</li>
         <li>listen to the site using a screen reader</li>
+        <li>choose between three color themes (green, pink, or peach) with dark and light variants while maintaining accessibility</li>
       </ul>
     <p>
       I also make the website text as simple as possible to understand.
@@ -96,8 +97,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
     <h3>Date</h3>
     <p>
       This statement was created on
-      <span class="basic-information statement-created-date">13 December 2025</span>
-       using the <a href="https://www.w3.org/WAI/planning/statements/">W3C Accessibility Statement Generator Tool</a>.
+      <span class="basic-information statement-created-date">15 February 2026.</span>
     </p>
   </div>
 </BaseLayout>
