--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -30,15 +30,20 @@ const fullItem = await getPortfolioItemBySlug(item.slug);
     <div class="row">
       <div class="flex flex-row justify-between">
         <h1 class="text-2xl font-bold mb-2">{fullItem.title}</h1>
-        {fullItem.isInDevelopment && (
+        <!-- {fullItem.isInDevelopment && (
           <span class="badge bg-warning">In Development</span>
+        )} -->
+        {fullItem.isInDevelopment && (
+            <span class="inline-block px-2 py-1 my-auto text-xs bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-gray-300 rounded">
+              In Development
+            </span>
         )}
       </div>
     </div>
     
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
       <div class="lg:col-span-1">
-        <div class="pt-6">
+        <div>
           <h2 class="text-xl font-semibold mb-4">Project Details</h2>
           <p>{fullItem.detailedDescription || fullItem.description}</p>
         </div>
