--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -27,13 +27,20 @@ const portfolioItems = await getAllPortfolioItems();
                     <a href={"/portfolio/" + item.slug}>{item.title}</a>
                   </h2>
 
-                  {item.isInDevelopment && (
-                    <div class="flex flex-wrap gap-1 mb-2 ml-3">
-                      <span class="inline-block px-2 py-1 text-xs bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-gray-300 rounded">
-                        In Development
-                      </span>
-                    </div>
-                  )}
+                  <div class="flex flex-wrap gap-1 mb-2 ml-3">
+                    {item.isInDevelopment && (
+                      
+                        <span class="inline-block px-2 py-1 text-xs bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-gray-300 rounded">
+                          In Development
+                        </span>
+                    )}
+                            
+                    {item.isIframe && (
+                        <span class="inline-block px-2 py-1 my-auto text-xs bg-green-200 dark:bg-green-700 text-gray-700 dark:text-gray-300 rounded">
+                          Live Demo
+                        </span>
+                    )}
+                  </div>
                 </header>
                 <section>
                   <p>{item.description}</p>
