IMP: Minor updates to about me

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -114,7 +114,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
           <!-- Professional Experience Tab -->
           <div id="experience-content" class="tab-content text-sm hidden">
             <p>With extensive experience across the entire software lifecycle, I've successfully designed, developed and deployed numerous desktop and web-based applications while working with and managing mixed-discipline teams. </p>
-            <p>My career spans from junior development to team leadership, with key roles including: Team Lead, Senior Software Engineer and Lead Back-end Developer.</p>
+            <p>My career spans from apprentice to junior development to team leadership, with key roles including: Team Lead, Senior Software Engineer and Lead Back-end Developer.</p>
             <p>Throughout my career, I have worked across multiple industries, from fintech to digital agencies to defense, and have delivered projects of varying sizes and complexity while developing strong leadership and technical expertise.</p>
           </div>
         </div>
