--- a/src/components/AuthorNoteComponent.astro
+++ b/src/components/AuthorNoteComponent.astro
@@ -10,23 +10,21 @@
         <h3 class="text-base font-medium text-gray-700 dark:text-gray-300">About the Author</h3>
         
         <div class="text-xs text-gray-600 dark:text-gray-400 space-y-1">
-            <p>Hey there! I'm <strong>Emma</strong>, MSc student, Senior Software Engineer and Team Lead who's been building cool stuff for over 12 years.</p>
+            <p>Hello hello! I'm <strong>Emma</strong>, MSc Cybersecurity student, Senior Software Engineer and Team Lead who's been building things since 2012.</p>
                         
             <p class="pt-1 flex flex-row">
-            <strong>Let's connect on </strong>
-            
-            <a href="https://www.linkedin.com/in/emmalouiselane/" target="_blank" rel="noopener noreferrer" 
-               class="text-blue-600 dark:text-blue-400 hover:underline mx-1">
-                LinkedIn
-            </a>
+              <strong>Let's connect on </strong>
+              <a href="https://www.linkedin.com/in/emmalouiselane/" target="_blank" rel="noopener noreferrer" 
+                class="text-blue-600 dark:text-blue-400 hover:underline mx-1">
+                  LinkedIn
+              </a>
 
-            <strong> or </strong>
-            
-            <a href="mailto:emma@sparklane.dev" 
-               class="text-blue-600 dark:text-blue-400 hover:underline mx-1">
-                Email
-            </a>
-          
+              <strong> or </strong>
+              
+              <a href="mailto:emma@sparklane.dev" 
+                class="text-blue-600 dark:text-blue-400 hover:underline mx-1">
+                  Email
+              </a>          
             </p>
         </div>
     </div>
